# hasql-notifications

./: flake.nix  hasql-notifications.cabal
src/Hasql/: Notifications.hs
test/Hasql/: NotificationsSpec.hs
