cabal-version:       3.6
name:                hasql-notifications
version:             0.2.0.3
synopsis:            LISTEN/NOTIFY support for Hasql
description:         Use PostgreSQL Asynchronous notification support with your Hasql Types.
homepage:            https://github.com/diogob/hasql-notifications
license:             BSD-3-Clause
license-file:        LICENSE
author:              Diogo Biazus
maintainer:          diogo@biazus.ca
copyright:           2020 Diogo Biazus
category:            Hasql, Database, PostgreSQL
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Hasql.Notifications
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.2
                     , text >= 1.2.3.1 && < 2.2
                     , hasql-pool >= 0.4 && < 0.9
                     , bytestring >= 0.10
                     , postgresql-libpq >= 0.9 && < 1.0
                     , hasql >= 0.19
                     , hasql-api
  mixins:              hasql hiding (Hasql.Session)
                     , hasql-api (Hasql.Api.Eff.Session as Hasql.Session)

  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions: OverloadedStrings

executable hasql-notifications
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasql
                     , hasql-api
                     , hasql-notifications
  mixins:              hasql hiding (Hasql.Session)
                     , hasql-api (Hasql.Api.Eff.Session as Hasql.Session)
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

test-suite hasql-notifications-test
  type:                exitcode-stdio-1.0
  other-modules:       Hasql.NotificationsSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasql
                     , hasql-api
                     , hasql-notifications
                     , hspec
                     , bytestring
                     , QuickCheck
  mixins:              hasql hiding (Hasql.Session)
                     , hasql-api (Hasql.Api.Eff.Session as Hasql.Session)
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/diogob/hasql-notifications
